--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+# ── ZORUNLU ──────────────────────────────────────────
 aiogram==3.7.0
 aiosqlite>=0.19.0
 aiohttp>=3.9.0
+
+# ── TRON (TRX + USDT TRC20) ──────────────────────────
 tronpy>=0.2.6
+
+# ── ETH / ERC20 ───────────────────────────────────────
 eth-account>=0.10.0
 web3>=6.0.0
+
+# ── BTC (opsiyonel, yoksa fallback çalışır) ───────────
+# python-bitcoin
